tests/compile-fail/integration_suite__integration__anm_features__err_sprite_clash_implicit.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: ambiguous value for automatic const 'my_sprite'
   ┌─ <input>:13:15
   │
 7 │     sprites: {my_sprite: {x: 1.0, y: 1.0, w: 111.0, h: 111.0, id: 1}},
   │               --------- definition with value 1
   ·
13 │     sprites: {my_sprite: {x: 2.0, y: 2.0, w: 222.0, h: 220.0}},
   │               ^^^^^^^^^ definition with value 2


